--- a/.settings/org.eclipse.buildship.core.prefs
+++ b/.settings/org.eclipse.buildship.core.prefs
@@ -1,11 +1,11 @@
-arguments=--init-script /opt/.devin/vscode_bin/vscode-reh-server-linux-x64-122662-bf85ae538ec/vscode-reh-server-linux-x64/extensions/redhat.java-1.32.0-linux-x64/server/configuration/org.eclipse.osgi/55/0/.cp/gradle/init/init.gradle --init-script /opt/.devin/vscode_bin/vscode-reh-server-linux-x64-122662-bf85ae538ec/vscode-reh-server-linux-x64/extensions/redhat.java-1.32.0-linux-x64/server/configuration/org.eclipse.osgi/55/0/.cp/gradle/protobuf/init.gradle
+arguments=--init-script C\:\\Users\\nikit\\AppData\\Roaming\\Code\\User\\globalStorage\\redhat.java\\1.41.1\\config_win\\org.eclipse.osgi\\58\\0\\.cp\\gradle\\init\\init.gradle --init-script C\:\\Users\\nikit\\AppData\\Roaming\\Code\\User\\globalStorage\\redhat.java\\1.41.1\\config_win\\org.eclipse.osgi\\58\\0\\.cp\\gradle\\protobuf\\init.gradle
 auto.sync=false
 build.scans.enabled=false
 connection.gradle.distribution=GRADLE_DISTRIBUTION(WRAPPER)
 connection.project.dir=
 eclipse.preferences.version=1
 gradle.user.home=
-java.home=/opt/.devin/vscode_bin/vscode-reh-server-linux-x64-122662-bf85ae538ec/vscode-reh-server-linux-x64/extensions/redhat.java-1.32.0-linux-x64/jre/17.0.11-linux-x86_64
+java.home=C\:/Program Files/Java/jdk-17
 jvm.arguments=
 offline.mode=false
 override.workspace.settings=true
