feat: Implement MediaPipe event logging functionality
- Added MediaPipeEventController to handle detection events from MediaPipe.
- Created ClientEventDTO for structured data transfer of client-side events.
- Developed EventLoggingService and EventLoggingServiceImpl for logging driver events with metadata.
- Introduced EventMetadataService for advanced analytics on event metadata.
- Implemented SessionService and SessionServiceImpl for managing driver sessions.
- Added JsonUtils for utility functions to handle JSON metadata in events.
- Enhanced logging and error handling throughout the services.

--- a/build.gradle
+++ b/build.gradle
@@ -36,6 +36,13 @@ dependencies {
     compileOnly 'org.projectlombok:lombok'
     annotationProcessor 'org.projectlombok:lombok'
     
+    // Jackson для обработки JSON
+    implementation 'com.fasterxml.jackson.core:jackson-databind:2.15.2' // Use a specific, recent version
+
+    // Logging - Managed by Spring Boot Starter Logging (included via web starter)
+    // implementation 'org.slf4j:slf4j-api:2.0.5' // Remove explicit version
+    // implementation 'ch.qos.logback:logback-classic:1.4.6' // Remove explicit version
+    
     // Разработка и тестирование
     developmentOnly 'org.springframework.boot:spring-boot-devtools'
     testImplementation 'org.springframework.boot:spring-boot-starter-test'
